src/fql/antlr4/FQLParser.java
// Generated from C:/Users/pcmarks/Documents/IdeaProjects/antlr4_1\FQL.g4 by ANTLR 4.4.1-dev
package fql.antlr4;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class FQLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.4.1-dev", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__59=1, T__58=2, T__57=3, T__56=4, T__55=5, T__54=6, T__53=7, T__52=8, 
		T__51=9, T__50=10, T__49=11, T__48=12, T__47=13, T__46=14, T__45=15, T__44=16, 
		T__43=17, T__42=18, T__41=19, T__40=20, T__39=21, T__38=22, T__37=23, 
		T__36=24, T__35=25, T__34=26, T__33=27, T__32=28, T__31=29, T__30=30, 
		T__29=31, T__28=32, T__27=33, T__26=34, T__25=35, T__24=36, T__23=37, 
		T__22=38, T__21=39, T__20=40, T__19=41, T__18=42, T__17=43, T__16=44, 
		T__15=45, T__14=46, T__13=47, T__12=48, T__11=49, T__10=50, T__9=51, T__8=52, 
		T__7=53, T__6=54, T__5=55, T__4=56, T__3=57, T__2=58, T__1=59, T__0=60, 
		STRING=61, NUMBER=62, Identifier=63, IdLetter=64, IdLetterOrDigit=65, 
		WS=66, COMMENT=67, LINE_COMMENT=68;
	public static final String[] tokenNames = {
		"<INVALID>", "'schema'", "'kernel'", "'inl'", "'equations'", "'implies'", 
		"'*'", "'or'", "'SIGMA'", "'external'", "'false'", "'iso2'", "'id'", "'relationalize'", 
		"'}'", "'fst'", "'char'", "'->'", "'union'", "'mapping'", "')'", "'arrows'", 
		"'unit'", "'iso1'", "'='", "'drop'", "'snd'", "'transform'", "'subschema'", 
		"'EVAL'", "'sigma'", "'enum'", "'query'", "','", "'('", "':'", "'not'", 
		"'match'", "'coreturn'", "'void'", "'{'", "'and'", "'prop'", "'ASWRITTEN'", 
		"'delta'", "'true'", "'attributes'", "'eval'", "'^'", "'.'", "'+'", "'opposite'", 
		"'return'", "';'", "'curry'", "'nodes'", "'QUERY'", "'pi'", "'inr'", "'then'", 
		"'instance'", "STRING", "NUMBER", "Identifier", "IdLetter", "IdLetterOrDigit", 
		"WS", "COMMENT", "LINE_COMMENT"
	};
	public static final int
		RULE_program = 0, RULE_declaration = 1, RULE_schemaDeclaration = 2, RULE_schema = 3, 
		RULE_schemaXXX = 4, RULE_plusType = 5, RULE_productType = 6, RULE_exponentType = 7, 
		RULE_unionType = 8, RULE_schemaConst = 9, RULE_schemaComponents = 10, 
		RULE_schemaComponentsNodes = 11, RULE_schemaComponentsAttributes = 12, 
		RULE_schemaComponentsArrows = 13, RULE_arrow = 14, RULE_schemaComponentsEquations = 15, 
		RULE_equation = 16, RULE_opposite = 17, RULE_instanceDeclaration = 18, 
		RULE_instance = 19, RULE_instanceConstructor = 20, RULE_instanceConstXXX = 21, 
		RULE_instanceConstNodes = 22, RULE_instanceConstNode = 23, RULE_instanceConstAttributes = 24, 
		RULE_instanceConstArrows = 25, RULE_instanceConstArrow = 26, RULE_instanceConstArrowStrings = 27, 
		RULE_instanceConstArrowString = 28, RULE_instanceDelta = 29, RULE_instanceSigma = 30, 
		RULE_instancePi = 31, RULE_instanceFullSigma = 32, RULE_instanceExternal = 33, 
		RULE_instanceRelationalize = 34, RULE_instanceEval = 35, RULE_instanceFullEval = 36, 
		RULE_queryDeclaration = 37, RULE_query = 38, RULE_queryP = 39, RULE_queryP1 = 40, 
		RULE_queryP2 = 41, RULE_queryP3 = 42, RULE_queryComp = 43, RULE_queryMtch = 44, 
		RULE_queryXXX = 45, RULE_queryYYY = 46, RULE_queryZZZ = 47, RULE_fullQueryDeclaration = 48, 
		RULE_fullQuery = 49, RULE_fullQueryMatch = 50, RULE_fullQueryXXX = 51, 
		RULE_fullQueryYYY = 52, RULE_fullQueryZZZ = 53, RULE_mappingDeclaration = 54, 
		RULE_mapping = 55, RULE_mappingXXX = 56, RULE_mappingConstructor = 57, 
		RULE_mappingConstXXX = 58, RULE_mappingConstNodes = 59, RULE_mappingConstAttributes = 60, 
		RULE_mappingConstArrows = 61, RULE_mappingNode = 62, RULE_mappingArrow = 63, 
		RULE_enumDeclaration = 64, RULE_transDeclaration = 65, RULE_transform = 66, 
		RULE_transConst = 67, RULE_transConstXXX = 68, RULE_transConstNode = 69, 
		RULE_transConstP = 70, RULE_transConstPTerm = 71, RULE_dropDeclaration = 72, 
		RULE_path = 73, RULE_value = 74;
	public static final String[] ruleNames = {
		"program", "declaration", "schemaDeclaration", "schema", "schemaXXX", 
		"plusType", "productType", "exponentType", "unionType", "schemaConst", 
		"schemaComponents", "schemaComponentsNodes", "schemaComponentsAttributes", 
		"schemaComponentsArrows", "arrow", "schemaComponentsEquations", "equation", 
		"opposite", "instanceDeclaration", "instance", "instanceConstructor", 
		"instanceConstXXX", "instanceConstNodes", "instanceConstNode", "instanceConstAttributes", 
		"instanceConstArrows", "instanceConstArrow", "instanceConstArrowStrings", 
		"instanceConstArrowString", "instanceDelta", "instanceSigma", "instancePi", 
		"instanceFullSigma", "instanceExternal", "instanceRelationalize", "instanceEval", 
		"instanceFullEval", "queryDeclaration", "query", "queryP", "queryP1", 
		"queryP2", "queryP3", "queryComp", "queryMtch", "queryXXX", "queryYYY", 
		"queryZZZ", "fullQueryDeclaration", "fullQuery", "fullQueryMatch", "fullQueryXXX", 
		"fullQueryYYY", "fullQueryZZZ", "mappingDeclaration", "mapping", "mappingXXX", 
		"mappingConstructor", "mappingConstXXX", "mappingConstNodes", "mappingConstAttributes", 
		"mappingConstArrows", "mappingNode", "mappingArrow", "enumDeclaration", 
		"transDeclaration", "transform", "transConst", "transConstXXX", "transConstNode", 
		"transConstP", "transConstPTerm", "dropDeclaration", "path", "value"
	};

	@Override
	public String getGrammarFileName() { return "FQL.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public FQLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public List<DeclarationContext> declaration() {
			return getRuleContexts(DeclarationContext.class);
		}
		public DeclarationContext declaration(int i) {
			return getRuleContext(DeclarationContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FQLListener ) ((FQLListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FQLListener ) ((FQLListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FQLVisitor ) return ((FQLVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(151); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(150); declaration();
				}
				}
				setState(153); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__59) | (1L << T__41) | (1L << T__35) | (1L << T__33) | (1L << T__29) | (1L << T__28) | (1L << T__4) | (1L << T__0))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarationContext extends ParserRuleContext {
		public MappingDeclarationContext mappingDeclaration() {
			return getRuleContext(MappingDeclarationContext.class,0);
		}
		public QueryDeclarationContext queryDeclaration() {
			return getRuleContext(QueryDeclarationContext.class,0);
		}
		public SchemaDeclarationContext schemaDeclaration() {
			return getRuleContext(SchemaDeclarationContext.class,0);
		}
		public DropDeclarationContext dropDeclaration() {
			return getRuleContext(DropDeclarationContext.class,0);
		}
		public InstanceDeclarationContext instanceDeclaration() {
			return getRuleContext(InstanceDeclarationContext.class,0);
		}
		public TransDeclarationContext transDeclaration() {
			return getRuleContext(TransDeclarationContext.class,0);
		}
		public EnumDeclarationContext enumDeclaration() {
			return getRuleContext(EnumDeclarationContext.class,0);
		}
		public FullQueryDeclarationContext fullQueryDeclaration() {
			return getRuleContext(FullQueryDeclarationContext.class,0);
		}
		public DeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FQLListener ) ((FQLListener)listener).enterDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FQLListener ) ((FQLListener)listener).exitDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FQLVisitor ) return ((FQLVisitor<? extends T>)visitor).visitDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclarationContext declaration() throws RecognitionException {
		DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_declaration);
		try {
			setState(163);
			switch (_input.LA(1)) {
			case T__59:
				enterOuterAlt(_localctx, 1);
				{
				setState(155); schemaDeclaration();
				}
				break;
			case T__0:
				enterOuterAlt(_localctx, 2);
				{
				setState(156); instanceDeclaration();
				}
				break;
			case T__41:
				enterOuterAlt(_localctx, 3);
				{
				setState(157); mappingDeclaration();
				}
				break;
			case T__29:
				enterOuterAlt(_localctx, 4);
				{
				setState(158); enumDeclaration();
				}
				break;
			case T__4:
				enterOuterAlt(_localctx, 5);
				{
				setState(159); fullQueryDeclaration();
				}
				break;
			case T__28:
				enterOuterAlt(_localctx, 6);
				{
				setState(160); queryDeclaration();
				}
				break;
			case T__33:
				enterOuterAlt(_localctx, 7);
				{
				setState(161); transDeclaration();
				}
				break;
			case T__35:
				enterOuterAlt(_localctx, 8);
				{
				setState(162); dropDeclaration();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SchemaDeclarationContext extends ParserRuleContext {
		public TerminalNode Identifier() { return getToken(FQLParser.Identifier, 0); }
		public SchemaContext schema() {
			return getRuleContext(SchemaContext.class,0);
		}
		public SchemaDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_schemaDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FQLListener ) ((FQLListener)listener).enterSchemaDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FQLListener ) ((FQLListener)listener).exitSchemaDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FQLVisitor ) return ((FQLVisitor<? extends T>)visitor).visitSchemaDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SchemaDeclarationContext schemaDeclaration() throws RecognitionException {
		SchemaDeclarationContext _localctx = new SchemaDeclarationContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_schemaDeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(165); match(T__59);
			setState(166); match(Identifier);
			setState(167); match(T__36);
			setState(168); schema();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SchemaContext extends ParserRuleContext {
		public SchemaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_schema; }
	 
		public SchemaContext() { }
		public void copyFrom(SchemaContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class SigExp_ZeroContext extends SchemaContext {
		public SigExp_ZeroContext(SchemaContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FQLListener ) ((FQLListener)listener).enterSigExp_Zero(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FQLListener ) ((FQLListener)listener).exitSigExp_Zero(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FQLVisitor ) return ((FQLVisitor<? extends T>)visitor).visitSigExp_Zero(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class SigExp_UnionContext extends SchemaContext {
		public UnionTypeContext unionType() {
			return getRuleContext(UnionTypeContext.class,0);
		}
		public SigExp_UnionContext(SchemaContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FQLListener ) ((FQLListener)listener).enterSigExp_Union(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FQLListener ) ((FQLListener)listener).exitSigExp_Union(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FQLVisitor ) return ((FQLVisitor<? extends T>)visitor).visitSigExp_Union(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class SigExp_OneContext extends SchemaContext {
		public SchemaXXXContext schemaXXX() {
			return getRuleContext(SchemaXXXContext.class,0);
		}
		public SigExp_OneContext(SchemaContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FQLListener ) ((FQLListener)listener).enterSigExp_One(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FQLListener ) ((FQLListener)listener).exitSigExp_One(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FQLVisitor ) return ((FQLVisitor<? extends T>)visitor).visitSigExp_One(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class SigExp_VarContext extends SchemaContext {
		public TerminalNode Identifier() { return getToken(FQLParser.Identifier, 0); }
		public SigExp_VarContext(SchemaContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FQLListener ) ((FQLListener)listener).enterSigExp_Var(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FQLListener ) ((FQLListener)listener).exitSigExp_Var(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FQLVisitor ) return ((FQLVisitor<? extends T>)visitor).visitSigExp_Var(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class SigExp_ConstContext extends SchemaContext {
		public SchemaConstContext schemaConst() {
			return getRuleContext(SchemaConstContext.class,0);
		}
		public SigExp_ConstContext(SchemaContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FQLListener ) ((FQLListener)listener).enterSigExp_Const(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FQLListener ) ((FQLListener)listener).exitSigExp_Const(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FQLVisitor ) return ((FQLVisitor<? extends T>)visitor).visitSigExp_Const(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class SigExp_OppositeContext extends SchemaContext {
		public OppositeContext opposite() {
			return getRuleContext(OppositeContext.class,0);
		}
		public SigExp_OppositeContext(SchemaContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FQLListener ) ((FQLListener)listener).enterSigExp_Opposite(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FQLListener ) ((FQLListener)listener).exitSigExp_Opposite(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FQLVisitor ) return ((FQLVisitor<? extends T>)visitor).visitSigExp_Opposite(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class SigExp_PlusContext extends SchemaContext {
		public PlusTypeContext plusType() {
			return getRuleContext(PlusTypeContext.class,0);
		}
		public SigExp_PlusContext(SchemaContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FQLListener ) ((FQLListener)listener).enterSigExp_Plus(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FQLListener ) ((FQLListener)listener).exitSigExp_Plus(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FQLVisitor ) return ((FQLVisitor<? extends T>)visitor).visitSigExp_Plus(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class SigExp_TimesContext extends SchemaContext {
		public ProductTypeContext productType() {
			return getRuleContext(ProductTypeContext.class,0);
		}
		public SigExp_TimesContext(SchemaContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FQLListener ) ((FQLListener)listener).enterSigExp_Times(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FQLListener ) ((FQLListener)listener).exitSigExp_Times(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FQLVisitor ) return ((FQLVisitor<? extends T>)visitor).visitSigExp_Times(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class SigExp_ExpContext extends SchemaContext {
		public ExponentTypeContext exponentType() {
			return getRuleContext(ExponentTypeContext.class,0);
		}
		public SigExp_ExpContext(SchemaContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FQLListener ) ((FQLListener)listener).enterSigExp_Exp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FQLListener ) ((FQLListener)listener).exitSigExp_Exp(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FQLVisitor ) return ((FQLVisitor<? extends T>)visitor).visitSigExp_Exp(this);
			else return visitor.visitChildren(this);
		}
	}
